--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -9,5 +9,7 @@
         <item name="colorAccent">@color/text_blueDark</item>
         <item name="android:colorBackground">@color/BlueDark2</item>
         <item name="android:textColorSecondary">@color/text_blueDark</item>
+        <item name="android:textColorTertiary">@color/white</item>
+
     </style>
 </resources>
