--- a/app/src/main/res/layout/add_object_sheet.xml
+++ b/app/src/main/res/layout/add_object_sheet.xml
@@ -28,7 +28,7 @@
         android:layout_marginTop="8dp"
         android:gravity="center_vertical"
         android:text="Предмет"
-        android:textColor="@color/white"
+        android:textColor="@color/text_blueDark"
         android:textSize="20dp" />
 
     <LinearLayout
@@ -44,10 +44,10 @@
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="0dp"
-            android:backgroundTint="@color/text_blueDark"
+            android:backgroundTint="@color/white"
             android:ems="10"
             android:inputType="textMultiLine"
-            android:textColor="@color/text_blueDark"
+            android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -76,7 +76,7 @@
         android:layout_marginTop="8dp"
         android:gravity="center_vertical"
         android:text="Преподаватель"
-        android:textColor="@color/white"
+        android:textColor="@color/text_blueDark"
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -98,10 +98,10 @@
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="0dp"
-            android:backgroundTint="@color/text_blueDark"
+            android:backgroundTint="@color/white"
             android:ems="10"
             android:inputType="textMultiLine"
-            android:textColor="@color/text_blueDark"
+            android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -126,7 +126,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:alpha="0.6"
-        android:background="@color/white"
+        android:background="@color/text_blueDark"
         app:layout_constraintBottom_toTopOf="@+id/ob_btn_send"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -145,7 +145,7 @@
         android:layout_marginTop="8dp"
         android:background="@drawable/border"
         android:text="Добавить"
-        android:textColor="@color/text_blueDark"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
