изменил иконки, исправил баги и добавил сайты, осталось исправить проблемы с фото и сделать выход и поток для таймера

--- a/app/src/main/res/layout/content_timer.xml
+++ b/app/src/main/res/layout/content_timer.xml
@@ -35,7 +35,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.497" />
 
     <SeekBar
         android:id="@+id/timer_seekBar"
@@ -47,10 +48,9 @@
         android:min="1"
         app:layout_constraintBottom_toTopOf="@+id/textView_countdown"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.459" />
+        app:layout_constraintVertical_bias="0.251" />
 
 
 </android.support.constraint.ConstraintLayout>
