--- a/app/src/main/res/layout/activity_timer.xml
+++ b/app/src/main/res/layout/activity_timer.xml
@@ -12,6 +12,7 @@
         android:layout_height="match_parent">
 
         <android.support.design.widget.AppBarLayout
+            android:id="@+id/appbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:theme="@style/AppTheme.AppBarOverlay">
@@ -26,7 +27,11 @@
 
         </android.support.design.widget.AppBarLayout>
 
-        <include layout="@layout/content_timer" />
+        <include
+            layout="@layout/content_timer"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/appbar" />
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab_stop"
