--- a/app/src/main/res/layout/add_schedule_sheet.xml
+++ b/app/src/main/res/layout/add_schedule_sheet.xml
@@ -2,11 +2,20 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="@color/BlueDark2"
     android:gravity="center_horizontal"
     android:orientation="vertical"
     android:padding="16dp">
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/schedule_fab_keyboard_sheet"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end"
+        android:theme="@style/BlackTheme"
+        app:fabSize="mini"
+        app:srcCompat="@drawable/ic_keyboard_white" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -158,7 +167,6 @@
             android:layout_width="match_parent"
             android:layout_height="47dp"
             android:layout_margin="8dp"
-            android:background="@color/BlueDark2"
             android:ems="10"
             android:inputType="textPersonName"
             android:textAppearance="?android:attr/textAppearanceSmall"
