добавил табель и изменил дизайн шрифтов

--- a/app/src/main/res/layout/activity_add_note.xml
+++ b/app/src/main/res/layout/activity_add_note.xml
@@ -119,6 +119,8 @@
         android:layout_marginTop="8dp"
         android:text="Выберите дату"
         android:textColor="@color/white"
+        android:fontFamily="@font/rus2"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.1"
@@ -155,6 +157,7 @@
         android:layout_marginTop="8dp"
         android:background="@drawable/border"
         android:text="Добавить"
+        android:fontFamily="@font/font_prog"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -174,6 +177,8 @@
         android:textColor="@color/text_blueDark"
         android:textSize="18dp"
         android:theme="@style/BlackTheme"
+        android:fontFamily="@font/rus2"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.033"
