--- a/app/src/main/res/layout/activity_add_home_work.xml
+++ b/app/src/main/res/layout/activity_add_home_work.xml
@@ -28,6 +28,8 @@
         android:text="Предмет"
         android:textColor="@color/white"
         android:textSize="20dp"
+        android:fontFamily="@font/rus2"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.028"
@@ -65,6 +67,8 @@
         android:text="Выберите дату"
         android:textColor="@color/white"
         android:textSize="20dp"
+        android:fontFamily="@font/rus2"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.035"
@@ -132,7 +136,7 @@
 
     <EditText
         android:id="@+id/hwadd_task"
-        android:layout_width="322dp"
+        android:layout_width="299dp"
         android:layout_height="83dp"
         android:layout_marginBottom="184dp"
         android:layout_marginEnd="8dp"
@@ -158,6 +162,9 @@
         android:layout_marginTop="8dp"
         android:background="@drawable/border"
         android:text="Добавить"
+        android:fontFamily="@font/font_prog"
+        android:textColor="@color/white"
+        android:textSize="17dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -175,10 +182,10 @@
         app:fabSize="mini"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.8"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/hwadd_task"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.457"
+        app:layout_constraintVertical_bias="0.499"
         app:srcCompat="@drawable/ic_addfile_white" />
 
 </android.support.constraint.ConstraintLayout>
