--- a/app/src/main/res/layout/activity_home_work.xml
+++ b/app/src/main/res/layout/activity_home_work.xml
@@ -40,8 +40,7 @@
             android:layout_alignParentBottom="true"
             android:layout_alignParentEnd="true"
             android:layout_gravity="bottom|end"
-            android:layout_marginBottom="20dp"
-            android:layout_marginEnd="30dp"
+            android:layout_margin="20dp"
             android:src="@drawable/ic_add_white" />
     </RelativeLayout>
 
