--- a/app/src/main/res/layout/activity_note.xml
+++ b/app/src/main/res/layout/activity_note.xml
@@ -41,8 +41,7 @@
             android:layout_alignParentBottom="true"
             android:layout_alignParentEnd="true"
             android:layout_gravity="bottom|end"
-            android:layout_marginBottom="20dp"
-            android:layout_marginEnd="30dp"
+            android:layout_margin="20dp"
             app:srcCompat="@drawable/ic_add_white" />
     </RelativeLayout>
 
