--- a/app/src/main/res/layout/activity_schedule.xml
+++ b/app/src/main/res/layout/activity_schedule.xml
@@ -85,8 +85,7 @@
             android:layout_alignParentBottom="true"
             android:layout_alignParentEnd="true"
             android:layout_gravity="end|bottom"
-            android:layout_marginBottom="20dp"
-            android:layout_marginEnd="30dp"
+            android:layout_margin="20dp"
             android:src="@drawable/ic_add_white" />
 
         <android.support.v4.view.ViewPager
