--- a/app/src/main/res/layout/activity_timer.xml
+++ b/app/src/main/res/layout/activity_timer.xml
@@ -53,7 +53,7 @@
             android:layout_gravity="bottom|start"
             android:layout_marginBottom="66dp"
             android:layout_marginStart="103dp"
-            app:srcCompat="@drawable/ic_play" />
+            app:srcCompat="@drawable/ic_play_white" />
 
     </RelativeLayout>
 
