--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -2,14 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="150dp"
-    android:background="@drawable/lio"
+    android:background="@drawable/icon"
     android:orientation="horizontal"
     android:padding="20dp">
 
     <ImageView
         android:layout_width="72dp"
         android:layout_height="75dp"
-        android:background="@drawable/lio" />
+        android:background="@drawable/icon" />
 
     <TextView
         android:layout_width="wrap_content"
