--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -26,7 +26,7 @@
                 android:layout_height="match_parent"
                 android:padding="0dp"
                 android:scaleType="centerCrop"
-                android:src="@drawable/lio"
+                android:src="@drawable/icon"
                 android:transitionName="selectedMovie" />
             <!--<ImageView
                 android:layout_width="match_parent"
