готово (перед релизом) cursor.close(), чистка кода, удалил старое

--- a/app/src/main/res/layout/activity_add_home_work.xml
+++ b/app/src/main/res/layout/activity_add_home_work.xml
@@ -257,7 +257,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:background="@drawable/border"
+        android:background="@drawable/border_blue"
         android:text="Добавить"
         android:fontFamily="@font/font_prog"
         android:textColor="@color/white"
