--- a/app/src/main/res/layout/activity_add_schedule.xml
+++ b/app/src/main/res/layout/activity_add_schedule.xml
@@ -98,7 +98,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:background="@drawable/border"
+        android:background="@drawable/border_blue"
         android:text="Добавить"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
