--- a/app/src/main/res/layout/add_object_sheet.xml
+++ b/app/src/main/res/layout/add_object_sheet.xml
@@ -123,7 +123,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:background="@drawable/border"
+        android:background="@drawable/border_blue"
         android:text="Добавить"
         android:textColor="@color/white"
         android:fontFamily="@font/font_prog"
