--- a/app/src/main/res/layout/grade.xml
+++ b/app/src/main/res/layout/grade.xml
@@ -99,7 +99,7 @@
 
                 <EditText
                     android:id="@+id/grade_et_addgrade"
-                    android:layout_width="100dp"
+                    android:layout_width="80dp"
                     android:layout_height="wrap_content"
                     android:digits="0123456789"
                     android:ems="10"
@@ -113,15 +113,13 @@
                     android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_marginBottom="8dp"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="8dp"
-                    android:background="@drawable/border"
+                    android:layout_margin="5dp"
+                    android:background="@drawable/border_green"
                     android:fontFamily="@font/font_prog"
                     android:text="Добавить оценку"
                     android:textColor="@color/white"
-                    android:textSize="17dp" />
+                    android:padding="5dp"
+                    android:textSize="15dp" />
 
                 <Button
                     android:id="@+id/grade_btn_del"
@@ -129,15 +127,13 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_marginBottom="8dp"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="8dp"
-                    android:background="@drawable/border"
+                    android:layout_margin="5dp"
+                    android:background="@drawable/border_red"
                     android:fontFamily="@font/font_prog"
                     android:text="Удалить последнюю оценку"
                     android:textColor="@color/white"
-                    android:textSize="16dp" />
+                    android:padding="5dp"
+                    android:textSize="15dp" />
             </LinearLayout>
 
 
